Added clickhouse export
* Added clickhouse export

* Corrections

* Added excluded columns

* Linting corrections

* Corrections

--- a/src/__myproject__/_config/config.yaml
+++ b/src/__myproject__/_config/config.yaml
@@ -7,6 +7,13 @@ parameters:
     datalake:
       base_path: '/%kernel.environment%'
 
+    clickhouse:
+      host:
+      port:
+
+    export:
+      excluded_columns:
+
   # overrides default bundle settings defined in site-packages/databricksbundle/_config/config.yaml
   #databricksbundle:
   #  databricks_connect:
