--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,8 +80,8 @@ distro = "1.4.0"
 injecta = "0.10.*"
 databricks-bundle = "^1.3.1"
 datalake-bundle = "^1.2.2"
-daipe-core = "^1.4.1"
-feature-store-bundle = "^2.1.0b1"
+daipe-core = "^1.4.3"
+feature-store-bundle = "^2.1.0"
 
 [tool.poetry.dev-dependencies]
 databricks-connect = { url = "https://daipe-packages.s3.eu-central-1.amazonaws.com/databricks-connect-9.1.2.tar.gz" }
