--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,11 +7,20 @@ jobs:
     uses: daipe-ai/daipe-project-ci-cd/.github/workflows/build.yml@v1
     with:
       pylint_enabled: true
+      check_displays: true
 
   deploy:
     needs: build
     uses: daipe-ai/daipe-project-ci-cd/.github/workflows/run_command.yml@v1
     with:
       command: daipe dbx:repo:update --env=test --repo-url=${{ github.server_url }}/${{ github.repository }}.git --repo-name=${{ github.event.repository.name }} --branch=${{ github.head_ref }} --force
+    secrets:
+      DBX_TOKEN: ${{ secrets.DBX_TOKEN }}
+
+  deploy_jobs:
+    needs: build
+    uses: daipe-ai/daipe-project-ci-cd/.github/workflows/run_command.yml@v1
+    with:
+      command: daipe dbx:job:create-all --env=test --repo_name=${{ github.event.repository.name }} --branch_name=${{ github.head_ref }}
     secrets:
       DBX_TOKEN: ${{ secrets.DBX_TOKEN }}
