--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -8,11 +8,20 @@ jobs:
     uses: daipe-ai/daipe-project-ci-cd/.github/workflows/build.yml@v1
     with:
       pylint_enabled: true
+      check_displays: true
 
   deploy:
     needs: build
     uses: daipe-ai/daipe-project-ci-cd/.github/workflows/run_command.yml@v1
     with:
       command: daipe dbx:repo:update --env=prod --repo-url=${{ github.server_url }}/${{ github.repository }}.git --repo-url=${{ github.server_url }}/${{ github.repository }}.git --repo-name=${{ github.event.repository.name }} --tag=${{ github.ref_name }} --force
+    secrets:
+      DBX_TOKEN: ${{ secrets.DBX_TOKEN }}
+
+  deploy_jobs:
+    needs: build
+    uses: daipe-ai/daipe-project-ci-cd/.github/workflows/run_command.yml@v1
+    with:
+      command: daipe dbx:job:create-all --env=prod --repo_name=${{ github.event.repository.name }}
     secrets:
       DBX_TOKEN: ${{ secrets.DBX_TOKEN }}
