Add setup for Spark tests

--- a/.env.dist
+++ b/.env.dist
@@ -2,3 +2,16 @@ APP_ENV=dev
 
 # Databricks
 DBX_TOKEN=
+
+# Windows
+# SPARK_HOME=$PWD/.venv/Lib/site-packages/pyspark
+# JAVA_HOME=$HOME/.databricks-connect
+# HADOOP_HOME=$PWD/.venv/hadoop
+# PYSPARK_PYTHON=$PWD/.venv/python.exe
+# PYSPARK_DRIVER_PYTHON=$PWD/.venv/python.exe
+
+# Linux
+# SPARK_HOME=$PWD/.venv/lib/python3.8/site-packages/pyspark
+# JAVA_HOME=$HOME/.databricks-connect-java
+# PYSPARK_PYTHON=$PWD/.venv/bin/python
+# PYSPARK_DRIVER_PYTHON=$PWD/.venv/bin/python
