--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,7 +84,8 @@ daipe-core = "^1.4.3"
 feature-store-bundle = "2.2.0b1"
 
 [tool.poetry.dev-dependencies]
-databricks-connect = { url = "https://daipe-packages.s3.eu-central-1.amazonaws.com/databricks-connect-9.1.2.tar.gz" }
+pyspark = {url = "https://daipe-packages.s3.eu-central-1.amazonaws.com/pyspark-3.2.0-py2.py3-none-any.whl"}
+delta-spark = {url = "https://daipe-packages.s3.eu-central-1.amazonaws.com/delta_spark-1.1.0-py3-none-any.whl"}
 poethepoet = ">=0.9.0,<1.0.0"
 pyfony-core = "^0.8.2"
 dbx-deploy = "^1.3.1"
