Better bins for integral numbers

--- a/src/__myproject__/_config/config.yaml
+++ b/src/__myproject__/_config/config.yaml
@@ -6,15 +6,18 @@ parameters:
   daipeproject:
     datalake:
       base_path: '/%kernel.environment%'
-    
+    checkpoint:
+      dir: 'dbfs:/tmp/checkpoints'
     export:
       clickhouse:
         host:
         port:
       bins:
-        percentile_percentage:
-        bin_count:
-        round_scale:
+        lower_percentile_percentage: 0.05
+        higher_percentile_percentage: 0.95
+        bin_count: 8
+        round_scale: 2
+        accuracy: 100
 
   featurestorebundle:
     db_name: '%kernel.environment%_odap_feature_store'
