--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,6 +82,7 @@ databricks-bundle = "^1.3.1"
 datalake-bundle = "^1.2.2"
 daipe-core = "^1.4.3"
 feature-store-bundle = "2.4.0b2"
+p360-export = "^1.0.0"
 
 [tool.poetry.dev-dependencies]
 pyspark = {url = "https://daipe-packages.s3.eu-central-1.amazonaws.com/pyspark-3.2.0-py2.py3-none-any.whl"}
