--- a/src/__myproject__/_config/config.yaml
+++ b/src/__myproject__/_config/config.yaml
@@ -22,9 +22,9 @@ parameters:
     db_name: '%kernel.environment%_odap_feature_store'
     base_path: 'dbfs:/path/to/feature_store'
     entities:
-     client:
-       id_column: "client_id"
-       id_column_type: "string"
+    #  test:
+    #    id_column: "id"
+    #    id_column_type: "string"
     feature:
       backend: 'delta_table'
     metadata:
