--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,7 +81,7 @@ injecta = "0.10.*"
 databricks-bundle = "^1.3.1"
 datalake-bundle = "^1.2.2"
 daipe-core = "^1.4.3"
-feature-store-bundle = "2.4.0b2"
+feature-store-bundle = "2.5.0"
 p360-export = "^1.0.0"
 
 [tool.poetry.dev-dependencies]
