--- a/src/__myproject__/_config/config.yaml
+++ b/src/__myproject__/_config/config.yaml
@@ -19,12 +19,12 @@ parameters:
         accuracy: 100
 
   featurestorebundle:
-    db_name: '%kernel.environment%_odap_feature_store'
+    db_name: 'jv_feature_store'
     base_path: 'dbfs:/path/to/feature_store'
     entities:
-    #  test:
-    #    id_column: "id"
-    #    id_column_type: "string"
+      client:
+        id_column: "client_id"
+        id_column_type: "string"
     feature:
       backend: 'delta_table'
     metadata:
@@ -46,3 +46,21 @@ parameters:
       defaults:
         base_path: '%daipeproject.datalake.base_path%'
         target_path: !expr 'base_path + "/" + db_identifier + "/" + table_identifier + ".delta"'
+        
+  p360_export:
+    config:
+      connection_string_getter: 'dbutils_secrets'
+      dbutils_secrets_scope: 'unit-kv'
+      azure_storage_config_base_path: 'abfss://configs@odapczlakeg2test.dfs.core.windows.net'
+      config_getter: 'azure_storage'
+    facebook:
+      access_token_key: jv-fb-access-token
+      ad_account_id: 'act_383271040067293'
+    sfmc:
+      client_id: 'efkwk3u07xl83ftdsuu0mo1m'
+      client_secret_key: jv-sfmc-client-secret
+      ftp_username: '510003196_5'
+      ftp_password_key: jv-sfmc-ftp-password
+      tenant_url: 'mcvgt52qhm-lj19fv4nfmrv6pdn1'
+      account_id: '510003196'
+      file_location: 'jv-demo'
