--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,9 @@ injecta = "0.10.*"
 databricks-bundle = "^1.3.1"
 datalake-bundle = "^1.2.2"
 daipe-core = "^1.4.3"
-feature-store-bundle = "2.5.1"
-p360-export = "1.0.2"
+feature-store-bundle = "^2.5"
+p360-export = "^1.1"
+p360-interface-bundle = "^0.1.2"
 
 [tool.poetry.dev-dependencies]
 # DBR 10.4 dependencies
