--- a/src/__myproject__/_config/config.yaml
+++ b/src/__myproject__/_config/config.yaml
@@ -8,6 +8,7 @@ parameters:
       base_path: '/%kernel.environment%'
     checkpoint:
       dir: 'dbfs:/tmp/checkpoints'
+
     export:
       clickhouse:
         host:
@@ -24,18 +25,11 @@ parameters:
 
   featurestorebundle:
     db_name: '%kernel.environment%_odap_feature_store'
-    base_path: 'dbfs:/path/to/feature_store'
+    base_path: '%daipeproject.datalake.base_path%/feature_store'
     entities:
     #  test:
     #    id_column: "id"
     #    id_column_type: "string"
-    feature:
-      backend: 'delta_table'
-    metadata:
-      backend: 'delta_table'
-    target:
-      backend: 'delta_table'
-
     widgets:
       defaults:
         timestamp: "2022-01-01"
@@ -50,3 +44,16 @@ parameters:
       defaults:
         base_path: '%daipeproject.datalake.base_path%'
         target_path: !expr 'base_path + "/" + db_identifier + "/" + table_identifier + ".delta"'
+
+  p360_interface_bundle:
+    featurestore:
+      post_actions:
+        metadata_adjustment:
+          export_path: '%daipeproject.datalake.base_path%/metadata'
+          mapping:
+            general:
+              feature: id
+              description: title
+              feature_template: master_feature
+            category:
+              # insert a list of categories and subcategories
