--- a/src/__myproject__/_config/config.yaml
+++ b/src/__myproject__/_config/config.yaml
@@ -13,9 +13,9 @@ parameters:
     db_name: '%kernel.environment%_odap_feature_store'
     base_path: '%daipeproject.datalake.base_path%/feature_store'
     entities:
-    #  test:
-    #    id_column: "id"
-    #    id_column_type: "string"
+      client:
+        id_column: "client_id"
+        id_column_type: "string"
     widgets:
       defaults:
         timestamp: "2022-01-01"
@@ -44,7 +44,7 @@ parameters:
             category:
               # insert a list of categories and subcategories
     clickhouse:
-      host:
+      host: '104.214.217.240'
       port: 8123
       credentials:
         user:
@@ -53,3 +53,9 @@ parameters:
         password:
           secret_scope: unit-kv
           secret_key: clickhouse-pass
+  p360_export:
+    config:
+      connection_string_getter: 'dbutils_secrets'
+      dbutils_secrets_scope: 'unit-kv'
+      azure_storage_config_base_path: 'abfss://configs@odapczfsilakeg2prod.dfs.core.windows.net'
+      config_getter: 'azure_storage'
