--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ databricks-bundle = "^1.3.1"
 datalake-bundle = "^1.2.2"
 daipe-core = "^1.4.3"
 feature-store-bundle = "^2.9.4"
-p360-export = "^1.3"
+p360-export = "^1.5.5"
 p360-interface-bundle = "^0.4.1"
 
 [tool.poetry.dev-dependencies]
@@ -31,13 +31,13 @@ idna = "2.10"
 ipython-genutils = "0.2.0"
 joblib = "1.0.1"
 kiwisolver = "1.3.1"
-numpy = "1.20.1"
+numpy = "1.20.3"
 patsy = "0.5.1"
 Pillow = "8.2.0"
 prompt-toolkit = "3.0.17"
 ptyprocess = "0.7.0"
 python-dateutil = "2.8.1"
-requests = "2.25.1"
+requests = "2.28.0"
 scikit-learn = "0.24.1"
 statsmodels = "0.12.2"
 tornado = "6.1"
@@ -51,10 +51,10 @@ ipykernel = "5.3.4"
 jedi = "0.17.2"
 jupyter-client = "6.1.12"
 koalas = "1.8.2"
-pandas = "1.2.4"
+pandas = "^1.5.2"
 pexpect = "4.8.0"
 protobuf = "3.17.2"
-pyarrow = "4.0.0"
+pyarrow = "^10.0.1"
 pyparsing = "2.4.7"
 pytz = "2020.5"
 requests-unixsocket = "0.2.0"
@@ -68,7 +68,7 @@ certifi = "2020.12.5"
 Cython = "0.29.23"
 distlib = "0.3.4"
 filelock = "3.6.0"
-ipython = "7.22.0"
+ipython = "^8.7.0"
 jmespath = "0.10.0"
 jupyter-core = "4.7.1"
 matplotlib = "3.4.2"
